--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
+    "allowJs": true,
+    "module": "CommonJS",
     "removeComments": true
   },
   "include": ["./routes/*.ts", "./*.ts", "./handler/*.ts"]
